# ani-cli

./: .ani-cli.swp  .gitattributes  .gitignore  2ani-cli.sh  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Home.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  UI  _ani-cli-bash  _ani-cli-zsh  aesgcm  aesgcm.c  android-install  android-uninstall  ani-cli  ani-cli-aa-crypto.py  ani-cli-win  ani-cli.1  ani-cli.cmd  ani-cli.yaml  ani-gui  anime-cli  code  completion_script  coverage-baseline.json  disclaimer.md  discord-rpc  discord-rpc.c  flake.nix  hacking.md  hist_transition.sh  install  install.sh  key_and_aareq  lefthook.yml  (+19 more)
.github/: CODEOWNERS  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report-template.md  bug-report.md  bug_report.md  enhancement.md  feature_request.md
.github/workflows/: ani-cli.yml  arch.yml  bash.yml  botan.yml  crap.yml  e2e.yml  frontend.yml  inverse-ani.yml  inverse-md.yml  inverse.yml  markdown.yml  master.yml  mutation.yml  no-awk-required.yml  readme.yml  rust.yml  title.yml  version.yml
Formula/: ani-cli.rb
docs/: architecture.md  development.md  i18n.md  testing.md  title-resolution.md
docs/proposals/: cast-multiviewer.md  luma-custom-assets.md
gui/backend/: Cargo.toml  deny.toml
gui/backend/migrations/: V001__initial.sql
gui/backend/proptest-regressions/history/: mod.txt
gui/backend/src/: app.rs  error.rs  i18n.rs  lib.rs
gui/backend/src/anicli/: bash.rs  env.rs  mod.rs  parser.rs  process.rs  update.rs
gui/backend/src/api/: mod.rs  syncplay.rs
gui/backend/src/cache/: db.rs  mod.rs  schema.rs  ttl.rs
gui/backend/src/commands/: aniskip.rs  app_info.rs  availability.rs  download.rs  external_player.rs  history.rs  kitsu.rs  kitsu_warm.rs  mod.rs  play.rs  play_cache.rs  play_referer.rs  play_resolution_cache.rs  play_select.rs  play_syncplay.rs  proxy_url.rs  session.rs  settings.rs  syncplay.rs  syncplay_test.rs
gui/backend/src/config/: mod.rs  paths.rs  syncplay.rs
gui/backend/src/history/: mod.rs
gui/backend/src/meta/: anilist.rs  aniskip.rs  images.rs  kitsu.rs  mod.rs
gui/backend/src/proxy/: m3u8.rs  mod.rs  token.rs  upstream.rs
gui/backend/src/scraper/: allanime.rs  mod.rs
gui/backend/tests/: anicli_progress_format.rs  anicli_run_debug.rs  api_play.rs  proxy_router.rs
gui/electron/: main.js  package.json  playwright.config.ts  pnpm-lock.yaml  preload.js
gui/electron/build-resources/: deb-after-install.sh  deb-after-remove.sh  installer.nsh
gui/electron/e2e/: smoke.spec.ts
gui/electron/scripts/: fetch-linux-deps.mjs  fetch-windows-deps.mjs  repack-appimage.mjs
gui/frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
gui/frontend/messages/: en.json
gui/frontend/project.inlang/: settings.json
gui/frontend/src/: app.d.ts  app.html
gui/frontend/tools/: build-messages.mjs
gui/src-tauri/: Cargo.toml  deny.toml  rustfmt.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: app.rs  error.rs  lib.rs  main.rs
gui/src-tauri/src/anicli/: mod.rs  process.rs
gui/src-tauri/src/api/: mod.rs
gui/src-tauri/src/cache/: db.rs  mod.rs  schema.rs  ttl.rs
gui/src-tauri/src/commands/: app_info.rs  history.rs  ipc.rs  kitsu.rs  mod.rs  proxy_url.rs  session.rs  settings.rs
gui/src-tauri/src/config/: mod.rs  paths.rs
gui/src-tauri/src/history/: mod.rs
gui/src-tauri/src/meta/: anilist.rs  images.rs  kitsu.rs
gui/src-tauri/src/proxy/: m3u8.rs  mod.rs  token.rs  upstream.rs
gui/src-tauri/tests/: anicli_run_debug.rs  image_cache.rs  kitsu_client.rs  proxy_router.rs
install-scripts/: install-dependencies.sh
lib/ani-cli/: UI  UI_dmenu  player_download  player_downloade  player_iina  player_mpv  player_syncplay  player_syncplaye  player_vlc  player_vlce
packaging/aur/: PKGBUILD  README.md
players/: player_download  player_iina  player_syncplay  player_vlc
scripts/: continue_ep.lua
spec/: ani-cli_spec.cr  spec_helper.cr
src/: ani-cli.cr  libgogo.cr  libmpvsk.cr  playing.sh  scraping.sh  ui.sh
tests/: selftest.sh
tests/arch/: bash_portability.sh  boundaries.sh  coverage_baseline_tool.sh  dep_direction.sh  electron_migration.sh  frontend_i18n.sh  i18n.sh  linux_deps.sh  run-all.sh
tests/bash/acceptance/: cli_basic.bats  cli_search_and_play.bats
tests/bash/helpers/: blob_builder.sh  coverage.sh  curl_mock.bash  curl_shim.sh  install-bats.sh  loader.bash  process_stub.bash  run-suite.sh
tests/bash/network/: episodes_list.bats  get_links.bats  process_hist_entry.bats  search_anime.bats  update_history.bats  update_script.bats
tests/bash/property/: b64url_roundtrip.bats
tests/bash/subprocess/: download.bats  play_episode.bats
tests/bash/unit/: b64url_to_hex.bats  decode_tobeparsed.bats  dep_ch.bats  lib_seam.bats  nth.bats  provider_init.bats  select_quality.bats  where_player.bats
tests/fixtures/: MANIFEST.md
tests/fixtures/allanime/: MANIFEST.json  embed_hls.json  embed_plain.json  embed_simple.json  embed_wixmp.json  episodes_attack_on_titan.json  episodes_short.json  search_empty.json  search_one_piece.json
tests/fixtures/history/: multi.tsv  single.tsv
tests/fixtures/kitsu/: MANIFEST.json  search_one_piece.json  (+3 more)
tests/tools/: check-coverage-baseline.test.mjs
tools/: check-coverage-baseline.mjs  crap-score.mjs
(+154 files in other folders)
